tests/Checker/everything/errors/23a.vc
int main() {
    break;
    while (false) {}
    return 1;
}
